crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_root_region_labelled.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: "snapshot_attrs(&labelled_api(Props::new().id(\"region\").role(Role::Region),\n\"Activity\").root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Activity",
            ),
        ),
        (
            Id,
            String(
                "region",
            ),
        ),
    ],
    styles: [],
}
